Opgradered til Mandrake 8.0 og lærte noget Makefile script.

--- a/alle/Makefile.fix
+++ b/alle/Makefile.fix
@@ -13,137 +13,106 @@ version=$(shell cat version.sgml)
 # dato
 dato=$(shell cat dato.sgml)
 
-# Her er en liste af sgml-filer der ændres automatisk
-badsgmlfiles=dato.sgml magic.sgml stikord.sgml
+# cygnus dsl ligger ikke ens på MDK8 og RH6.2
+cygnusdsl = $(firstword $(wildcard  /usr/share/sgml/docbook/dsssl-stylesheets-cygnus/stylesheets/cygnus-both.dsl /usr/lib/sgml/stylesheets/cygnus-both.dsl))
 
-# Her er  en liste af alle sgml
-allesgmlfiles=$(wildcard *.sgml)
-
-# Cygnus path
-cygnusf=$(wildcard /usr/share/sgml/docbook/dsssl-stylesheets-cygnus/stylesheets/cygnus-both.dsl /usr/lib/sgml/stylesheets/cygnus-both.dsl )
-cygnus = $(firstword $(cygnusf))
-
-# Har vi Perl-modulet Image::Size installeret
-imagesizef=$(wildcard /usr/lib/perl5/site_perl/5.005/Image/Size.pm /usr/lib/perl5/site_perl/5.6.0/Image/Size.pm /usr/lib/site_perl/5.6.0/Image/Size.pm )
-imagesize = $(firstword $(imagesizef))
-
-# Har vi tidy installeret?
-tidy=$(wildcard /usr/bin/tidy)
+badfiles1 = $(wildcard ../*/dato.sgml)
+badfiles2 = $(wildcard ../*/magic.sgml)
+badfiles3 = $(wildcard ../*/stikord.sgml)
+badfiles4 = $(wildcard ../*/version.sgml)
+badfiles = $(badfiles1) $(badfiles2) $(badfiles3) $(badfiles4)
 
 # Her er en liste af sgml-filer der skal checkes
-#sgmlfiler=$(filter-out $(badsgmlfiles),$(allesgmlfiles))
-sgmlfiler=$(allesgmlfiles) \
-          ../friheden/*.sgml \
-          ../admin/*.sgml \
-          ../web/*.sgml \
-          ../applikationer/*.sgml \
-          ../c/*.sgml \
-          ../docbook/*.sgml \
-          ../program/*.sgml
+totalsgmlfiler=$(wildcard ../alle/*.sgml) \
+	$(wildcard ../friheden/*.sgml) \
+	$(wildcard ../admin/*.sgml) \
+	$(wildcard ../web/*.sgml) \
+	$(wildcard ../applikationer/*.sgml) \
+	$(wildcard ../c/*.sgml) \
+	$(wildcard ../docbook/*.sgml) \
+	$(wildcard ../kontorbruger/*.sgml) \
+	$(wildcard ../itplatform/*.sgml) \
+	$(wildcard ../program/*.sgml)
+
+sgmlfiler = $(filter-out $(badfiles),$(totalsgmlfiler))
 
 # her er det der skal laves
-all:	billeder html palmpilot sgml pspdf exit
+all: html palmpilot sgml
 
-sgml: $(targetname)-$(version).sgml.tgz
+sgml: $(sgmlfiler) $(targetname)-$(version).sgml.tar.gz $(targetname)-$(version).sgml.zip
 
-$(targetname)-$(version).sgml.tgz: $(sgmlfiler)
-	tar cvzf $(targetname)-$(version).sgml.tgz *.sgml Makefile collateindex.pl
+$(targetname)-$(version).sgml.tar.gz:
+	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).sgml.tar.gz $(targetshortname)/*.sgml $(targetshortname)/Makefile $(targetshortname)/collateindex.pl)
 
-palmpilot: $(targetname)-$(version).palm.tgz
+$(targetname)-$(version).sgml.zip:
+	(cd ..;zip $(targetshortname)/$(targetname)-$(version).sgml.zip -r $(targetshortname)/*.sgml $(targetshortname)/Makefile $(targetshortname)/collateindex.pl )
 
-$(targetname)-$(version).palm.tgz: $(sgmlfiler)
-	make html
+palmpilot: $(targetname)-$(version).palm.zip
+
+$(targetname)-$(version).palm.zip: html
 	rm -f palm/*.prc palm/*.pdb
 	(cd palm;plucker-build -v -P . -f $(targetname))
 	cp ../misc/*.prc palm
-	tar cvzf $(targetname)-$(version).palm.tgz palm/*.prc palm/*.pdb
+	zip $(targetname)-$(version).palm.zip palm/*.prc palm/*.pdb
 
 statusfiler:
 	@$(shell date +%d/%m-%Y> dato.sgml)
-	@echo start på $(targetshortname)	
-	@echo Version er $(version)
 	@echo Dato sat til $(dato)
-	@echo Checker $(sgmlfiler)
 
-exit:
-	@echo slut på $(targetshortname)
-	@echo --------------
-	@echo 
-
-billeder:
-	cp ../friheden/images/*.png images
-	cp ../admin/images/*.png images
-	cp ../web/images/*.png images
-	cp ../program/images/*.png images
-	cp ../c/images/*.png images
-	cp ../docbook/images/*.png images
-	cp ../applikationer/images/*.png images
-	cp ../sikkerhed/images/*.png images
-
-
-htmlfiler: 
+html: $(targetshortname) pakhtml
+$(targetshortname): $(sgmlfiler) statusfiler
 	@echo "Target er HTML i" $(targetshortname)/bog
-	rm -rf tempdir stikord.sgml magic.sgml $(targetname)-*.html.tgz bog
+	rm -rf tempdir stikord.sgml magic.sgml $(targetname)-*.html.tar.gz bog
 	echo '<!ENTITY magic "png">' > magic.sgml
 	mkdir tempdir
 	perl ./collateindex.pl -s Symboler -x -t Stikordsregister -g -i stikord -N -o stikord.sgml
 	cp *.sgml tempdir
-	(cd tempdir; jade -t sgml -ihtml -d $(cygnus)\#html -V html-index bog.sgml)
+	(cd tempdir; jade -t sgml -ihtml -d $(cygnusdsl)\#html -V html-index bog.sgml)
 	(cd tempdir; perl ../collateindex.pl -s Symboler  -x -t Stikordsregister  -g -i stikord  -o stikord.sgml HTML.index)
 	#db2html bog.sgml
-	(cd tempdir;jade -t sgml -ihtml -d $(cygnus)\#html bog.sgml)
-	rm -rf bog
-	mkdir bog
-	cp tempdir/*.html bog
-	cp linuxbog.css bog
-	cp ../friheden/images/*.png bog
-	cp ../admin/images/*.png bog
-	cp ../web/images/*.png bog
-	cp ../program/images/*.png bog
-	cp ../applikationer/images/*.png bog
-	cp ../c/images/*.png bog
-	cp ../docbook/images/*.png bog
-	cp ../sikkerhed/images/*.png bog
+	(cd tempdir;jade -t sgml -ihtml -d $(cygnusdsl)\#html bog.sgml)
+	mkdir $(targetshortname)
+	cp tempdir/*.html $(targetshortname)
+	cp ../friheden/images/*.png $(targetshortname)
+	cp ../admin/images/*.png $(targetshortname)
+	cp ../web/images/*.png $(targetshortname)
+	cp ../program/images/*.png $(targetshortname)
+	cp ../c/images/*.png $(targetshortname)
+	cp ../docbook/images/*.png $(targetshortname)
+	cp ../kontorbruger/images/*.png $(targetshortname)
+	cp ../itplatform/images/*.png $(targetshortname)
+	cp ../applikationer/images/*.png $(targetshortname)
+	cp ../sikkerhed/images/*.png $(targetshortname)
+	cp linuxbog.css $(targetshortname)
 	rm -rf tempdir
-	@echo "Done HTML (html)"
-	@echo ""
-
-reparerhtml:
-ifneq	("$(imagesize)","")
-		(cd bog;perl ../misc/insertimagesize)
+ifeq	("$(shell perl -e 'use Image::Size; print "1"' 2> /dev/null)", "1")
+	(cd html;perl ../../misc/insertimagesize)
 else
-		echo "Du bør installere Perl-modulet Image:Size"
+	@echo Du mangler perl modulet Image::Size.
 endif
-ifneq	("$(tidy)","")
-		(cd bog;tidy -f err.txt -imu *html;rm -f err.txt)
+ifeq	("1", "1")
+#ifneq	($(shell if which tidy &> /dev/null; then echo -n 1; fi), "1")
+	(cd html;tidy -f err.txt -imu *html;rm -f err.txt)
 else
-	echo "Du bør installere tidy"
+	@echo du mangler tidy.
 endif
 
-pakhtml:
-	mv bog $(targetshortname)
-	tar cvzf $(targetname)-$(version).html.tgz $(targetshortname)
+pakhtml: $(targetname)-$(version).html.tar.gz $(targetname)-$(version).html-ub.tar.gz $(targetname)-$(version).png.tar.gz $(targetname)-$(version)_html.zip	
+
+$(targetname)-$(version).html.tar.gz:
+	tar czf $(targetname)-$(version).html.tar.gz $(targetshortname)
+
+$(targetname)-$(version).html-ub.tar.gz:
+	tar czf $(targetname)-$(version).html-ub.tar.gz $(targetshortname)/*.html $(targetshortname)/*.css
+
+$(targetname)-$(version).png.tar.gz:
+	tar czf $(targetname)-$(version).png.tar.gz $(targetshortname)/*.png
+
+$(targetname)-$(version)_html.zip:
 	zip $(targetname)-$(version)_html.zip $(targetshortname)/*
-	tar cvzf $(targetname)-$(version).html-ub.tgz $(targetshortname)/*.html $(targetshortname)/*.css
-	mv $(targetshortname) bog 
-	mv images $(targetshortname)_images
-	tar cvzf $(targetname)-$(version).png.tgz $(targetshortname)_images/
-	mv $(targetshortname)_images images 
-	@echo "Done HTML pakning (pakhtml)"
-	@echo ""
-
-bog/index.html: $(sgmlfiler)
-	make statusfiler
-	make htmlfiler 
-	make reparerhtml 
-	make pakhtml
-
-html: bog/index.html
 
 pspdf:	$(targetname)-$(version)_pdf.zip
-
-$(targetname)-$(version)_pdf.zip: $(sgmlfiler)
-	make statusfiler
+$(targetname)-$(version)_pdf.zip: billeder statusfiler
 	@echo "Target is" $(targetname).ps.gz
 	rm -rf bogps bogpdf stikord.sgml tempdir magic.sgml
 	mkdir tempdir
@@ -152,23 +121,23 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	cp *.sgml tempdir
 	(cd tempdir; jade -t sgml -ihtml -d /usr/lib/sgml/stylesheets/cygnus-both.dsl\#print -V html-index -V nochunks bog.sgml > ged.html)
 	perl ./collateindex.pl -s Symboler -x -t Stikordsregister  -g -i stikord  -o stikord.sgml tempdir/HTML.index
-	mkdir bogps
-	find images/*.png | sed 's/.png//' | sed 's=images/==' | xargs -i% /usr/X11R6/bin/convert -antialias images/%.png eps2:bogps/%.eps
-	echo '<!ENTITY magic "eps">' > magic.sgml
-	cp *.sgml bogps
-	(cd bogps; db2ps bog.sgml > /dev/null)
-	mv bogps/bog.ps $(targetname)-$(version).ps
-	rm -f $(targetname)-*.ps.gz
-	@echo "Done PS (pspdf)"
-	@echo ""
-	gzip -9 $(targetname)-$(version).ps
+#	mkdir bogps
+#	find images/*.png | sed 's/.png//' | sed 's=images/==' | xargs -i% /usr/X11R6/bin/convert -antialias images/%.png eps2:bogps/%.eps
+#	echo '<!ENTITY magic "eps">' > magic.sgml
+#	cp *.sgml bogps
+#	(cd bogps; db2ps bog.sgml > /dev/null)
+#	mv bogps/bog.ps $(targetname)-$(version).ps
+#	rm -f $(targetname)-*.ps.gz
+#	@echo "Done PS (pspdf)"
+#	@echo ""
+#	gzip -9 $(targetname)-$(version).ps
 	@echo "Target er" $(targetname).pdf
 	echo '<!ENTITY magic "png">' > magic.sgml
 	mkdir bogpdf
 	cp *.sgml bogpdf
 	rm -f $(targetname)-*.pdf
 	cp images/*.png bogpdf
-	(cd bogpdf; db2pdf bog.sgml > /dev/null)
+	(cd bogpdf; db2pdf bog.sgml )
 	mv bogpdf/bog.pdf $(targetname)-$(version).pdf
 	pdfinfo $(targetname)-$(version).pdf | grep Pages: | cut -d':' -f2 > sideantal.txt
 	zip $(targetname)-$(version)_pdf.zip $(targetname)-$(version).pdf
@@ -178,6 +147,6 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 test:
 	echo $(sgmlfiler)
 
+.PHONY clean:
+	rm -rf dato.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk html stikord.sgml tempdir bogps bogpdf $(targetname)* $(targetshortname) palm/*.prc palm/*.pdb sideantal.txt images
 
-clean:
-	rm -rf dato.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)* palm/*.prc palm/*.pdb sideantal.txt images/*.png images/*.eps
