--- a/Makefile.subdir.tlb
+++ b/Makefile.subdir.tlb
@@ -51,7 +51,7 @@ tidy:=$(wildcard /usr/bin/tidy)
 cygnus:=$(firstword $(wildcard /usr/share/sgml/docbook/dsssl-stylesheets-cygnus/stylesheets/cygnus-both.dsl /usr/lib/sgml/stylesheets/cygnus-both.dsl))
 
 # Image Magick convert
-ImageMagickconvertf:=$(firstword $(wildcard /usr/bin/convert /usr/X11R6/bin/convert))
+ImageMagickconvert:=$(firstword $(wildcard /usr/bin/convert /usr/X11R6/bin/convert))
 
 # her er det der skal laves
 all: start html pspdf palmpilot sgml eksempelbackup stop
@@ -192,7 +192,6 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	mv bogpdf/bog.pdf $(targetname)-$(version).pdf
 	pdfinfo $(targetname)-$(version).pdf | grep Pages: | cut -d':' -f2 > sideantal.txt
 	zip $(targetname)-$(version)_pdf.zip $(targetname)-$(version).pdf
-
 	@echo "Done PDF (pspdf)"
 	@echo ""
 
