--- a/Makefile.tlb
+++ b/Makefile.tlb
@@ -6,13 +6,22 @@ all: filer
 
 release : version cvs2html filer 
 
+Specfiler: 
+	@for dir in $(SUBDIRS); do \
+		echo %define buildname $$dir > $$dir/linuxbog-$$dir.spec; \
+		echo Name: linuxbog-$$dir >> $$dir/linuxbog-$$dir.spec; \
+		echo Summary: `grep -A2 "<title>" $$dir/indhold.sgml | head -n 1 | cut -d '>' -f 2 | cut -d '<' -f 1` >> $$dir/linuxbog-$$dir.spec; \
+		echo Version: `cat $$dir/version.sgml` >> $$dir/linuxbog-$$dir.spec; \
+		echo Release: 1mdk >>  $$dir/linuxbog-$$dir.spec; \
+		cat linuxbog.spec >> $$dir/linuxbog-$$dir.spec; \
+	done;
+
 Makefiler:
 	@for dir in $(SUBDIRS); do \
 		cp -f Makefile.subdir.tlb $$dir/Makefile; \
 	done;
-# Remove me later.
 
-filer:  Makefiler
+filer:  Makefiler Specfiler
 	@for dir in $(SUBDIRS); do \
 		$(MAKE) -C $$dir; \
 	done;
@@ -20,14 +29,14 @@ filer:  Makefiler
 
 pspdf:	Makefiler
 	@for dir in $(SUBDIRS); do \
-		$(MAKE) -C $$dir pspdf \
+		$(MAKE) -C $$dir pspdf; \
 	done;
 
 	$(MAKE) -C alle -f Makefile.tlb pspdf
 
-version:
+version: Makefiler
 	@for dir in $(SUBDIRS); do \
-		$(MAKE) -C $$dir version \
+		$(MAKE) -C $$dir version; \
 	done;
 
 	cp friheden/version.sgml alle/version.sgml
