--- a/alle/Makefile.tlb
+++ b/alle/Makefile.tlb
@@ -5,7 +5,7 @@ locdirname=$(shell pwd)
 targetshortname=$(notdir $(locdirname))
 
 # Med linux- foran
-targetname=linux-$(notdir $(locdirname))
+targetname=linuxbog-$(notdir $(locdirname))
 
 # version
 version=$(shell cat version.sgml)
