Man skal huske at ryde op efter sige selv.

--- a/Makefile.tlb
+++ b/Makefile.tlb
@@ -50,6 +50,7 @@ clean: Makefiler
 	@for dir in $(SUBDIRS); do \
 		$(MAKE) -C $$dir clean; \
 		rm -f $$dir/Makefile; \
+		rm -f $$dir/linuxbog-$$dir.spec; \
 	done;
 
 	$(MAKE) -C alle -f Makefile.tlb clean
