--- a/Makefile.subdir.tlb
+++ b/Makefile.subdir.tlb
@@ -92,10 +92,15 @@ else
 	echo "Du bør installere plucker for at kunne lave palm-udgaven"
 endif
 
-rpm:
-	cp linuxbog-$(targetshortname).spec bog
+specfile:
+	echo %define buildname $(targetshortname) > $(targetname).spec
+	echo Name: linuxbog-$(targetshortname) >> $(targetname).spec
+	echo Summary: `grep -A2 "<title>" indhold.sgml | head -n 1 | cut -d '>' -f 2 | cut -d '<' -f 1` >> $(targetname).spec
+	echo Version: `cat version.sgml` >> $(targetname).spec
+	echo Release: 1mdk >>  $(targetname).spec
+	cat ../linuxbog.spec >> bog/$(targetname).spec
 
-pakhtml: rpm
+pakhtml: specfile
 	mv bog $(targetshortname)
 	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).html.tar.gz $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler  )
 	(cd ..;zip $(targetshortname)/$(targetname)-$(version)_html.zip -r $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler)
@@ -114,20 +119,20 @@ bog/index.html: $(sgmlfiler)
 	rm -rf tempdir stikord.sgml magic.sgml $(targetname)-*.html.tar.gz bog
 	echo '<!ENTITY magic "png">' > magic.sgml
 	mkdir tempdir
-	perl ./collateindex.pl -s Symboler  -t Stikordsregister -g -i stikord -N -o stikord.sgml
+	perl ./collateindex.pl -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml
 	cp *.sgml tempdir
 	(cd tempdir; jade -t sgml -ihtml -d $(cygnus)\#html -V html-index bog.sgml)
-	perl ./collateindex.pl -s Symboler -t Stikordsregister  -g -i stikord  -o stikord.sgml tempdir/HTML.index
+	perl ./collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o stikord.sgml tempdir/HTML.index
 	rm -rf tempdir
 	db2html bog.sgml
 	cp linuxbog.css bog
 	cp images/*.png bog
-ifneq   ("$(imagesize)","")
+ifeq	($(shell perl -e 'use Image::Size; print "1"' 2> /dev/null), 1)
 	(cd bog;perl ../../misc/insertimagesize)
 else
 	@echo "Du bør installere Perl-modulet Image:Size"
 endif
-ifneq   ("$(tidy)","")
+ifeq	($(shell if which tidy >/dev/null 2>&1; then echo -n 1; fi;), 1)
 	(cd bog;tidy -latin1 -f err.txt -imu *html;rm -f err.txt)
 else
 	@echo "Du bør installere tidy"
@@ -149,12 +154,12 @@ bog/enfil.html: $(sgmlfiler)
 	(cd bog1; jade -t sgml -ihtml -d /usr/lib/sgml/stylesheets/cygnus-both.dsl\#html -V nochunks bog.sgml > index.html)
 	cp linuxbog.css bog1
 #	cp images/*.png bog1
-ifneq   ("$(imagesize)","")
+ifeq	($(shell perl -e 'use Image::Size; print "1"' 2> /dev/null), 1)
 	(cd bog1;perl ../../misc/insertimagesize)
 else
 	echo "Du bør installere Perl-modulet Image:Size"
 endif
-ifneq   ("$(tidy)","")
+ifeq	($(shell if which tidy >/dev/null 2>&1; then echo -n 1; fi;), 1)
 	(cd bog1;tidy -f err.txt -imu *html;rm -f err.txt)
 else
 	echo "Du bør installere tidy"
