--- a/Makefile.subdir.tlb
+++ b/Makefile.subdir.tlb
@@ -93,11 +93,11 @@ else
 endif
 
 specfile:
-	echo %define buildname $(targetshortname) > $(targetname).spec
-	echo Name: linuxbog-$(targetshortname) >> $(targetname).spec
-	echo Summary: `grep -A2 "<title>" indhold.sgml | head -n 1 | cut -d '>' -f 2 | cut -d '<' -f 1` >> $(targetname).spec
-	echo Version: `cat version.sgml` >> $(targetname).spec
-	echo Release: 1mdk >>  $(targetname).spec
+	echo %define buildname $(targetshortname) > bog/$(targetname).spec
+	echo Name: linuxbog-$(targetshortname) >> bog/$(targetname).spec
+	echo Summary: `grep -A2 "<title>" indhold.sgml | head -n 1 | cut -d '>' -f 2 | cut -d '<' -f 1` >> bog/$(targetname).spec
+	echo Version: `cat version.sgml` >> bog/$(targetname).spec
+	echo Release: 1mdk >>  bog/$(targetname).spec
 	cat ../linuxbog.spec >> bog/$(targetname).spec
 
 pakhtml: specfile
