--- a/alle/Makefile.tlb
+++ b/alle/Makefile.tlb
@@ -66,8 +66,8 @@ $(targetname)-$(version).palm.zip: html
 
 html: statusfiles $(targetshortname) pakhtml
 $(targetshortname): $(sgmlfiler)
-	@echo "Target er HTML i" $(targetshortname)/bog
-	rm -rf tempdir stikord.sgml magic.sgml $(targetname)-*.html.tar.gz bog
+	@echo "Target er HTML i" $(targetshortname)/$targetshortname
+	rm -rf tempdir stikord.sgml magic.sgml $(targetname)-*.html.tar.gz $(targetshortname)
 	echo '<!ENTITY magic "png">' > magic.sgml
 	mkdir tempdir
 	perl ./collateindex.pl -s Symboler -x -t Stikordsregister -g -i stikord -N -o stikord.sgml
@@ -76,24 +76,34 @@ $(targetshortname): $(sgmlfiler)
 	(cd tempdir; perl ../collateindex.pl -s Symboler  -x -t Stikordsregister  -g -i stikord  -o stikord.sgml HTML.index)
 	#db2html bog.sgml
 	(cd tempdir;jade -t sgml -ihtml -d $(cygnusdsl)\#html bog.sgml)
-	mkdir bog
-	cp tempdir/*.html bog
+	mkdir alle
+	cp tempdir/*.html $(targetshortname)
 	for dir in $(SUBDIRS); do \
-		cp ../$$dir/images/*.png bog; \
+		cp ../$$dir/images/*.png $(targetshortname); \
 	done;
+	cp linuxbog.css $(targetshortname)
 	rm -rf tempdir
 ifeq	($(shell perl -e 'use Image::Size; print "1"' 2> /dev/null), 1)
-	(cd html;perl ../../misc/insertimagesize)
+	(cd $(targetshortname);perl ../../misc/insertimagesize)
 else
 	@echo Du bør installere Perl-modulet Image::Size.
 endif
 ifeq	($(shell if which tidy >/dev/null 2>&1; then echo -n 1; fi;), 1)
-	(cd html;tidy -f err.txt -imu *html;rm -f err.txt)
+	(cd $(targetshortname);tidy -f err.txt -imu *html;rm -f err.txt)
 else
 	@echo Du bør installere tidy.
 endif
 
-pakhtml: $(targetname)-$(version).html.tar.gz $(targetname)-$(version).html-ub.tar.gz $(targetname)-$(version).png.tar.gz $(targetname)-$(version)_html.zip	
+
+specfile:
+	echo %define buildname $(targetshortname) > $(targetshortname)/$(targetname).spec
+	echo Name: linuxbog-$(targetshortname) >> $(targetshortname)/$(targetname).spec
+	echo Summary: `grep -A2 "<title>" ../friheden/indhold.sgml | head -n 1 | cut -d '>' -f 2 | cut -d '<' -f 1` >> $(targetshortname)/$(targetname).spec
+	echo Version: `cat ../friheden/version.sgml` >> $(targetshortname)/$(targetname).spec
+	echo Release: 1mdk >>  $(targetshortname)/$(targetname).spec
+	cat ../linuxbog.spec >> $(targetshortname)/$(targetname).spec
+
+pakhtml: specfile $(targetname)-$(version).html.tar.gz $(targetname)-$(version).html-ub.tar.gz $(targetname)-$(version).png.tar.gz $(targetname)-$(version)_html.zip	
 
 $(targetname)-$(version).html.tar.gz:
 	tar czf $(targetname)-$(version).html.tar.gz $(targetshortname)
