Rette GPL til OPL.

--- a/Makefile.tlb
+++ b/Makefile.tlb
@@ -39,7 +39,8 @@ clean: Makefiler
 	$(MAKE) -C alle -f Makefile.tlb clean
 
 	rm -rf cvs2html
-	rm -rf Friheden_palm.tgz 
+	rm -rf Friheden_palm.tgz
+	rm -f dato.sgml version.sgml
 
 cvs2html:
 	chmod +x /home/pto/utils/cvs2html
