--- a/Makefile.subdir.tlb
+++ b/Makefile.subdir.tlb
@@ -237,5 +237,5 @@ endif
 
 
 clean:
-	@rm -rf dato.sgml version.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*.tar.gz $(targetname)*zip $(targetname)*.pdf $(targetname)*.ps  $(targetname)*.ps.gz  palm/*.prc palm/*.pdb sideantal.txt $(targetname)-*_eksempler.tar.gz
+	@rm -rf dato.sgml version.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*.tar.gz $(targetname)*zip $(targetname)*.pdf $(targetname)*.ps  $(targetname)*.ps.gz  palm/*.prc palm/*.pdb sideantal.txt $(targetname)-*_eksempler.tar.gz $(targetshortname)
 	@echo Cleaning.
