--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -101,7 +101,7 @@ exit:
 	@echo "---------------------------------------------"
 	@echo 
 
-htmlfiler: 
+htmlfiler: gemversion
 	@echo "Target er HTML i" $(targetshortname)/bog
 	rm -rf tempdir stikord.sgml magic.sgml $(targetname)-*.html.tar.gz bog
 	echo '<!ENTITY magic "png">' > magic.sgml
@@ -131,7 +131,7 @@ endif
 	(cd bog;rm -f apprevhist.html;ln -sf *apprevhist.html apprevhist.html)
 
 
-pakhtml:
+pakhtml: html
 	mv bog $(targetshortname)
 	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).html.tar.gz $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler  )
 	(cd ..;zip $(targetshortname)/$(targetname)-$(version)_html.zip -r $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler)
